# matrix_stickers_manager

./: .gitignore  README.md  example.config.yaml  main.py  pyproject.toml  requirements.txt
matrix_stickers_manager/: __init__.py  manager.py
tests/: example.test.env  test_main.py
