[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matrix_stickers_manager"
authors = [{name = "foresle", email = "foresle@tutanota.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pytest~=7.2.1",
    "environs~=9.5.0",
    "requests~=2.28.2",
    "filetype~=1.2.0",
    "dataclass_wizard~=0.22.2"
]

[project.urls]
Home = "https://github.com/foresle/matrix_stickers_manager"
